<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_root">

    <!-- Контейнер для содержимого вкладок -->
    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Разделитель над таб-баром -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <!-- Нижняя панель вкладок -->
    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:orientation="horizontal"
        android:background="@color/bg_bar">

        <LinearLayout
            android:id="@+id/tab_agent"
            style="@style/TabItem">
            <ImageView
                android:id="@+id/tab_agent_icon"
                style="@style/TabIcon"
                android:src="@drawable/ic_tab_agent" />
            <TextView
                android:id="@+id/tab_agent_text"
                style="@style/TabLabel"
                android:text="@string/tab_agent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_explorer"
            style="@style/TabItem">
            <ImageView
                android:id="@+id/tab_explorer_icon"
                style="@style/TabIcon"
                android:src="@drawable/ic_tab_explorer" />
            <TextView
                android:id="@+id/tab_explorer_text"
                style="@style/TabLabel"
                android:text="@string/tab_explorer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_editor"
            style="@style/TabItem">
            <ImageView
                android:id="@+id/tab_editor_icon"
                style="@style/TabIcon"
                android:src="@drawable/ic_tab_editor" />
            <TextView
                android:id="@+id/tab_editor_text"
                style="@style/TabLabel"
                android:text="@string/tab_editor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_github"
            style="@style/TabItem">
            <ImageView
                android:id="@+id/tab_github_icon"
                style="@style/TabIcon"
                android:src="@drawable/ic_tab_github" />
            <TextView
                android:id="@+id/tab_github_text"
                style="@style/TabLabel"
                android:text="@string/tab_github" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
